--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0"
 thiserror = "1.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "fibonacci"
+harness = false
