--- a/.github/workflows/monkey.yml
+++ b/.github/workflows/monkey.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +20,9 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Run build
+        run: cargo build --verbose
 
       - name: Run format
         run: cargo fmt -- --check
